# Pixelation

./: CMakeLists.txt  README.md  build.sh  pixelate
include/: block_averaging.hpp  dithering.hpp  load.hpp  process.hpp  quantize.hpp  thread_pool.hpp
src/: block_averaging.cpp  dithering.cpp  load.cpp  main.cpp  process.cpp  quantize.cpp  thread_pool.cpp
